--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "clean": "npx rimraf .next coverage out",
     "dev": "next dev --turbopack",
+    "graphql:codegen": "graphql-codegen",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "start": "next start",
@@ -20,6 +21,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
@@ -29,6 +32,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@faker-js/faker": "^9.4.0",
+    "@graphql-codegen/add": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/import-types-preset": "^3.0.0",
+    "@graphql-codegen/typescript": "^4.1.3",
+    "@graphql-codegen/typescript-operations": "^4.4.1",
+    "@graphql-codegen/typescript-urql": "^4.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
