--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "clean": "npx rimraf .next coverage out",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "graphql:codegen": "graphql-codegen",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
