--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
     "eslint": "^9.19.0",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
