--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: https://penumbra-explorer.buber.eepy.sh/
+schema: ${NEXT_PUBLIC_GRAPHQL_URL}
 config:
   # https://www.graphql-code-generator.com/docs/config-reference/naming-convention#remove-underscores
   namingConvention:
