--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "env-cmd next build",
     "clean": "npx rimraf .next coverage out",
-    "dev": "next dev",
-    "graphql:codegen": "graphql-codegen",
+    "dev": "env-cmd next dev",
+    "graphql:codegen": "env-cmd graphql-codegen",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "start": "next start",
+    "start": "env-cmd next start",
     "stylelint": "stylelint src/**/*.css",
     "stylelint:fix": "stylelint --fix src/**/*.css",
-    "test": "jest",
+    "test": "env-cmd jest",
     "test:codegen": "npx tsx src/__tests__/__fixtures__/generate.ts",
     "test:coverage": "npm test -- --coverage",
-    "test:watch": "jest --watch",
+    "test:watch": "npm test -- --watch",
     "typecheck": "tsc"
   },
   "dependencies": {
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "env-cmd": "^10.1.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "lucide-react": "^0.475.0",
