--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "stylelint-config-recommended": "^15.0.0",
         "stylelint-order": "^6.0.4",
         "stylelint-prettier": "^5.0.3",
+        "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
     },
     "engines": {
