--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "env-cmd next build",
+        "build": "env-cmd --silent next build",
         "clean": "npx rimraf .next coverage out",
         "dev": "env-cmd next dev",
         "graphql:codegen": "env-cmd graphql-codegen",
         "lint": "next lint",
         "lint:fix": "next lint --fix",
-        "start": "env-cmd next start",
+        "start": "env-cmd --silent next start",
         "stylelint": "stylelint src/**/*.css",
         "stylelint:fix": "stylelint --fix src/**/*.css",
-        "test": "env-cmd jest",
+        "test": "jest",
         "test:codegen": "npx tsx src/__tests__/__fixtures__/generate.ts",
         "test:coverage": "npm test -- --coverage",
         "test:watch": "npm test -- --watch",
