--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -21,7 +21,7 @@ jobs:
         id: deployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          environment-url: https://penumbra-blockchain-explorer-426149560589.europe-west6.run.app/
+          environment-url: https://pe-frontend-564694434950.europe-west6.run.app/
           initial-status: in_progress
 
       - name: Set up Node.js
@@ -69,42 +69,42 @@ jobs:
           state: failure
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
 
-#  deploy:
-#    needs: test
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      deployments: write
-#      id-token: write
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      - name: Authenticate to Google Cloud
-#        uses: google-github-actions/auth@v2
-#        with:
-#          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-#
-#      - name: Set up Google Cloud SDK
-#        uses: google-github-actions/setup-gcloud@v2
-#        with:
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
-#
-#      - name: Deploy to Google Cloud
-#        run: |
-#          gcloud config set compute/region ${{ secrets.GCP_REGION }}
-#          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ secrets.GCP_REGION }}
-#
-#      - uses: chrnorm/deployment-status@v2
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          state: success
-#          deployment-id: ${{ needs.test.outputs.deployment_id }}
-#
-#      - if: failure()
-#        uses: chrnorm/deployment-status@v2
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          state: failure
-#          deployment-id: ${{ needs.test.outputs.deployment_id }}
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Deploy to Google Cloud
+        run: |
+          gcloud config set compute/region ${{ secrets.GCP_REGION }}
+          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ secrets.GCP_REGION }}
+
+      - uses: chrnorm/deployment-status@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          state: success
+          deployment-id: ${{ needs.test.outputs.deployment_id }}
+
+      - if: failure()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          state: failure
+          deployment-id: ${{ needs.test.outputs.deployment_id }}
 
