--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "typecheck": "tsc"
     },
     "dependencies": {
+        "@microlink/react-json-view": "^1.26.1",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
