--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,14 @@
         "noEmit": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "paths": {
+            "@/components": [
+                "./src/components"
+            ],
+            "@/lib/*": [
+                "./src/lib/*"
+            ]
+        },
         "plugins": [
             {
                 "name": "next"
