Use .env-cmdrc.json for different environments

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "env-cmd --silent next build",
+        "build": "env-cmd -e dev next build",
         "clean": "npx rimraf .next coverage out",
-        "dev": "env-cmd next dev",
-        "graphql:codegen": "env-cmd graphql-codegen",
+        "dev": "env-cmd -e dev next dev",
+        "graphql:codegen": "env-cmd -e dev graphql-codegen",
         "lint": "next lint",
         "lint:fix": "next lint --fix",
-        "start": "env-cmd --silent next start",
+        "start": "env-cmd -e dev next start",
         "stylelint": "stylelint src/**/*.css",
         "stylelint:fix": "stylelint --fix src/**/*.css",
         "test": "jest",
