--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "eslint": "^9.19.0",
         "eslint-config-next": "^15.1.7",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-perfectionist": "^4.9.0",
         "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "jest": "^29.7.0",
