--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -55,8 +55,10 @@ jobs:
           gist-id: 9208254a7b67b695d104a875931624d8
           token: ${{ secrets.GIST_TOKEN }}
 
-      # TODO: Enforce minimum code coverage
-      # https://github.com/marketplace/actions/very-good-coverage
+      - name: Enforce minimum coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v2
+        with:
+          min_coverage: 20
 
       - name: Cache .next directory
         uses: actions/cache@v4
