Add loadBlock tests

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start": "env-cmd -e dev next start",
         "stylelint": "stylelint src/**/*.css",
         "stylelint:fix": "stylelint --fix src/**/*.css",
-        "test": "jest",
+        "test": "env-cmd -e dev jest",
         "test:codegen": "npx tsx src/lib/__tests__/__fixtures__/generate.ts",
         "test:coverage": "npm test -- --coverage",
         "test:watch": "npm test -- --watch",
@@ -41,6 +41,7 @@
         "@graphql-codegen/typescript": "^4.1.3",
         "@graphql-codegen/typescript-operations": "^4.4.1",
         "@graphql-codegen/typescript-urql": "^4.0.0",
+        "@graphql-tools/jest-transform": "^2.0.0",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
