Update GRAPHQL_URL env var

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,5 +1,5 @@
 {
     "dev": {
-        "GRAPHQL_URL": "https://penumbra-explorer.buber.eepy.sh/"
+        "GRAPHQL_URL": "https://pe.dev.galaxid.xyz/"
     }
 }
