--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
+        "formik": "^2.4.6",
         "graphql": "^16.10.0",
         "graphql-tag": "^2.12.6",
         "lucide-react": "^0.476.0",
