Make GRAPHQL_URL env var available to client

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,5 +1,5 @@
 {
     "dev": {
-        "GRAPHQL_URL": "https://pe.dev.galaxid.xyz/"
+        "NEXT_PUBLIC_GRAPHQL_URL": "https://pe.dev.galaxid.xyz/"
     }
 }
