--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@microlink/react-json-view": "^1.26.1",
+        "@penumbra-zone/protobuf": "^9.0.0",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
