--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@graphql-codegen/typescript-operations": "^4.4.1",
         "@graphql-codegen/typescript-urql": "^4.0.0",
         "@graphql-tools/jest-transform": "^2.0.0",
+        "@tailwindcss/postcss": "^4.0.12",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
@@ -60,12 +61,14 @@
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.5.1",
         "postcss-nesting": "^13.0.1",
-        "postcss-normalize": "^13.0.1",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "stylelint": "^16.14.1",
         "stylelint-config-idiomatic-order": "^10.0.0",
         "stylelint-config-recommended": "^15.0.0",
+        "stylelint-config-tailwindcss": "^1.0.0",
         "stylelint-order": "^6.0.4",
         "stylelint-prettier": "^5.0.3",
+        "tailwindcss": "^4.0.12",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
     },
