--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
         "next": "^15.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "urql": "^4.2.1",
-        "usehooks-ts": "^3.1.1"
+        "urql": "^4.2.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
