--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "next": "^15.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "tailwind-merge": "^3.0.2",
         "urql": "^4.2.1"
     },
     "devDependencies": {
