--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,5 +1,6 @@
 {
     "dev": {
+        "BASE_URL": "https://pe-frontend-564694434950.europe-west6.run.app",
         "NEXT_PUBLIC_GRAPHQL_URL": "https://pe.dev.galaxid.xyz/"
     }
 }
