--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -1,9 +1,14 @@
 name: Deploy to Google Cloud
 
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      env_name_short:
+        required: true
+        type: string
+      env_name_long:
+        required: true
+        type: string
 
 jobs:
   test:
@@ -21,7 +26,7 @@ jobs:
         id: deployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          environment: development
+          environment: ${{ inputs.env_name_long }}
           #environment-url: https://pe-frontend-564694434950.europe-west6.run.app/
           initial-status: in_progress
 
@@ -99,7 +104,7 @@ jobs:
       - name: Deploy to Google Cloud
         run: |
           gcloud config set compute/region ${{ secrets.GCP_REGION }}
-          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ secrets.GCP_REGION }},_ENV_NAME=dev
+          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ secrets.GCP_REGION }},_ENV_NAME=${{ inputs.env_name_short }}
 
       - uses: chrnorm/deployment-status@v2
         with:
