Refactor GitHub Actions workflow triggering

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -6,8 +6,15 @@ on:
       - develop
 
 jobs:
-  call_workflow:
+  trigger_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
       env_name_long: development
       env_name_short: dev
+      github_token: ${{ secrests.GITHUB_TOKEN }}
+      github_ref_name: ${{ github.ref_name }}
+      github_sha: ${{ github.sha }}
+      gist_token: ${{ secrests.GIST_TOKEN }}
+      gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+      gcp_credentials: ${{ secrets.GCP_CREDENTIALS }}
+      gcp_region: europe-west6
