--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -9,6 +9,27 @@ on:
       env_name_long:
         required: true
         type: string
+      github_token:
+        required: true
+        type: string
+      github_ref_name:
+        required: true
+        type: string
+      github_sha:
+        required: true
+        type: string
+      gist_token:
+        required: true
+        type: string
+      gcp_project_id:
+        required: true
+        type: string
+      gcp_credentials:
+        required: true
+        type: string
+      gcp_region:
+        required: true
+        type: string
 
 jobs:
   test:
@@ -25,7 +46,7 @@ jobs:
       - uses: chrnorm/deployment-action@v2
         id: deployment
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ inputs.github_token }}
           environment: ${{ inputs.env_name_long }}
           #environment-url: https://pe-frontend-564694434950.europe-west6.run.app/
           initial-status: in_progress
@@ -58,7 +79,7 @@ jobs:
         uses: gaelgirodon/ci-badges-action@v1
         with:
           gist-id: 9208254a7b67b695d104a875931624d8
-          token: ${{ secrets.GIST_TOKEN }}
+          token: ${{ inputs.gist_token }}
 
       - name: Cache .next directory
         uses: actions/cache@v4
@@ -76,7 +97,7 @@ jobs:
       - if: failure()
         uses: chrnorm/deployment-status@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ inputs.github_token }}
           state: failure
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
 
@@ -94,28 +115,28 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          credentials_json: ${{ inputs.gcp_credentials }}
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: ${{ inputs.gcp_project_id }}
 
       - name: Deploy to Google Cloud
         run: |
-          gcloud config set compute/region ${{ secrets.GCP_REGION }}
-          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ secrets.GCP_REGION }},_ENV_NAME=${{ inputs.env_name_short }}
+          gcloud config set compute/region ${{ inputs.gcp_region }}
+          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ inputs.github_ref_name }},_COMMIT_SHA=${{ inputs.github_sha }},_REGION=${{ inputs.gcp_region }},_ENV_NAME=${{ inputs.env_name_short }}
 
       - uses: chrnorm/deployment-status@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ inputs.github_token }}
           state: success
           deployment-id: ${{ needs.test.outputs.deployment_id }}
 
       - if: failure()
         uses: chrnorm/deployment-status@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ inputs.github_token }}
           state: failure
           deployment-id: ${{ needs.test.outputs.deployment_id }}
 
