--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  workflow_call:
+  trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
       env_name_long: development
