--- a/.github/workflows/trigger-test.yaml
+++ b/.github/workflows/trigger-test.yaml
@@ -7,6 +7,6 @@ on:
 
 jobs:
   trigger_workflow:
-    uses: ./.github/workflows/trigger-test.yaml
+    uses: ./.github/workflows/test.yaml
     with:
       token: ${{ secrets.GITHUB_TOKEN }}
