Update test workflow

--- a/.github/workflows/trigger-test.yaml
+++ b/.github/workflows/trigger-test.yaml
@@ -9,4 +9,4 @@ jobs:
   trigger_workflow:
     uses: ./.github/workflows/test.yaml
     with:
-      token: ${{ secrets.GITHUB_TOKEN }}
+      github_token: ${{ secrets.GITHUB_TOKEN }}
