--- a/.github/workflows/trigger-test.yaml
+++ b/.github/workflows/trigger-test.yaml
@@ -9,4 +9,5 @@ jobs:
   trigger_workflow:
     uses: ./.github/workflows/test.yaml
     with:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+      foo: bar
+    secrets: inherit
