--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -9,7 +9,7 @@ jobs:
   trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
-      env_name_long: development
-      env_name_short: dev
+      env_name: dev
+      env_name_label: development
       gcp_region: europe-west4
     secrets: inherit
