--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -3,10 +3,10 @@ name: Deploy to Google Cloud
 on:
   workflow_call:
     inputs:
-      env_name_short:
+      env_name:
         required: true
         type: string
-      env_name_long:
+      env_name_label:
         required: true
         type: string
       gcp_region:
@@ -29,7 +29,7 @@ jobs:
         id: deployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          environment: ${{ inputs.env_name_long }}
+          environment: ${{ inputs.env_name_label }}
           #environment-url: https://pe-frontend-564694434950.europe-west6.run.app/
           initial-status: in_progress
 
@@ -107,7 +107,7 @@ jobs:
       - name: Deploy to Google Cloud
         run: |
           gcloud config set compute/region ${{ inputs.gcp_region }}
-          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ inputs.gcp_region }},_ENV_NAME=${{ inputs.env_name_short }}
+          gcloud builds submit --config cloudbuild.yaml --substitutions=_BRANCH_NAME=${{ github.ref_name }},_COMMIT_SHA=${{ github.sha }},_REGION=${{ inputs.gcp_region }},_ENV_NAME=${{ inputs.env_name }}
 
       - uses: chrnorm/deployment-status@v2
         with:
