--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -7,7 +7,7 @@ jobs:
   trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
-      env_name_long: production
-      env_name_short: prod
+      env_name: prod
+      env_name_label: production
       gcp_region: us-east4
     secrets: inherit
