--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -7,7 +7,7 @@ jobs:
   trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
-      env_name_long: staging
-      env_name_short: staging
+      env_name: staging
+      env_name_label: staging
       gcp_region: us-east4
     secrets: inherit
