--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: gcloud
     args: [run, deploy, 'penumbra-explorer-${_ENV_NAME}', --source, ., --region, '${_REGION}', --allow-unauthenticated,
-           --set-env-vars, '_BRANCH_NAME=${_BRANCH_NAME},_COMMIT_SHA=${_COMMIT_SHA}']
+           --set-env-vars, '_BRANCH_NAME=${_BRANCH_NAME},_COMMIT_SHA=${_COMMIT_SHA},_ENV_NAME=${_ENV_NAME}']
