--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "env-cmd -e dev next build",
+        "build": "env-cmd next build",
         "clean": "npx rimraf .next coverage out",
-        "dev": "env-cmd -e dev next dev",
-        "graphql:codegen": "env-cmd -e dev graphql-codegen",
+        "dev": "env-cmd next dev",
+        "graphql:codegen": "env-cmd graphql-codegen",
         "lint": "next lint",
         "lint:fix": "next lint --fix",
-        "start": "env-cmd -e dev next start",
+        "start": "env-cmd next start",
         "stylelint": "stylelint src/**/*.css",
         "stylelint:fix": "stylelint --fix src/**/*.css",
-        "test": "env-cmd -e dev jest",
+        "test": "env-cmd jest",
         "test:coverage": "npm test -- --coverage",
         "test:watch": "npm test -- --watch",
         "typecheck": "tsc"
