--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@penumbra-zone/protobuf": "^9.0.0",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
+        "fathom-client": "^3.7.2",
         "graphql": "^16.10.0",
         "graphql-tag": "^2.12.6",
         "lucide-react": "^0.484.0",
