--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@microlink/react-json-view": "^1.26.1",
         "@penumbra-zone/protobuf": "^9.0.0",
+        "@penumbra-zone/ui": "^13.15.0",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
         "fathom-client": "^3.7.2",
