--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@microlink/react-json-view": "^1.26.1",
+        "@penumbra-zone/perspective": "^51.0.0",
         "@penumbra-zone/protobuf": "^9.0.0",
         "@penumbra-zone/ui": "^13.15.0",
         "dayjs": "^1.11.13",
@@ -26,7 +27,7 @@
         "fathom-client": "^3.7.2",
         "graphql": "^16.10.0",
         "graphql-tag": "^2.12.6",
-        "lucide-react": "^0.486.0",
+        "lucide-react": "^0.487.0",
         "motion": "^12.4.10",
         "next": "^15.1.6",
         "react": "^19.0.0",
