--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@microlink/react-json-view": "^1.26.1",
+        "@penumbra-labs/registry": "^12.5.0",
         "@penumbra-zone/perspective": "^51.0.0",
         "@penumbra-zone/protobuf": "^9.0.0",
         "@penumbra-zone/ui": "^13.15.0",
