--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@penumbra-zone/perspective": "^53.0.0",
         "@penumbra-zone/protobuf": "^9.0.0",
         "@penumbra-zone/ui": "^13.15.0",
+        "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "env-cmd": "^10.1.0",
         "fathom-client": "^3.7.2",
