Set up GraphQL subscriptions with graphql-ws

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "fathom-client": "^3.7.2",
         "graphql": "^16.10.0",
         "graphql-tag": "^2.12.6",
+        "graphql-ws": "^6.0.4",
         "lucide-react": "^0.488.0",
         "motion": "^12.4.10",
         "next": "^15.1.6",
