--- a/codegen.yaml
+++ b/codegen.yaml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: ${NEXT_PUBLIC_GRAPHQL_URL}
+schema: https://${NEXT_PUBLIC_GRAPHQL_HOST}/graphql
 config:
   # https://www.graphql-code-generator.com/docs/config-reference/naming-convention#remove-underscores
   namingConvention:
