--- a/codegen.yaml
+++ b/codegen.yaml
@@ -7,6 +7,7 @@ config:
     transformUnderscore: true
 documents:
   - src/lib/graphql/queries/**/*.graphql
+  - src/lib/graphql/subscriptions/**/*.graphql
   - src/lib/graphql/mutations/**/*.graphql
   - src/lib/graphql/fragments/**/*.graphql
 generates:
