Integrate @penumbra-zone/ui/ValueView for IBC

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
         "tailwind-merge": "^3.0.2",
-        "urql": "^4.2.1"
+        "urql": "^4.2.1",
+        "zustand": "^5.0.4"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
