--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,22 @@
 steps:
+  # Debugging step
+  - name: 'gcr.io/cloud-builders/bash'
+    env:
+      - _ENV_NAME=${_ENV_NAME}
+      - _REGION=${_REGION}
+    script: |
+      #!/usr/bin/env bash
+      echo "--- Cloud Build Step Environment Variables ---"
+      echo "_ENV_NAME: $_ENV_NAME"
+      echo "_REGION: $_REGION"
+      echo "--- All environment variables for this step: ---"
+      env
+      echo "---------------------------------------------"
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: gcloud
     # Cloud Build environment variables
     env:
       - _ENV_NAME=${_ENV_NAME}
-    script: |
-      #!/usr/bin/env bash
-      env
     args:
       # Deploy from source
       - run
