--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,18 @@
+options:
+  automapSubstitutions: true
+
 steps:
+  - name: node:20
+    entrypoint: npm
+    args:
+      - ci
+  - name: node:20
+    entrypoint: npm
+    args:
+      - run
+      - build
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: gcloud
-    # Cloud Build environment variables
-    env:
-      - _ENV_NAME=${_ENV_NAME}
     args:
       # Deploy from source
       - run
@@ -20,6 +29,6 @@ steps:
       - --min-instances=1
       - --concurrency=20
       - --platform=managed
-      # Cloud Run environment variables
+      # Runtime environment variables
       - --set-env-vars
       - _ENV_NAME=${_ENV_NAME}
