--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.3.0",
     "private": true,
     "scripts": {
-        "build": "node -e \"console.log('_ENV_NAME: ' + process.env._ENV_NAME);\" && env-cmd -r .env.js next build",
+        "build": "env-cmd -r .env.js next build",
         "clean": "npx rimraf .next coverage out",
         "dev": "env-cmd -r .env.js next dev",
         "graphql:codegen": "env-cmd -r .env.js graphql-codegen",
