Simplify environment and deployment setup

--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -4,6 +4,22 @@ on:
   workflow_dispatch:
 
 jobs:
+  env_setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Copy .env.prod to .env
+        run: cp .env.prod .env
+
+      - name: Upload .env artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: env-file
+          path: .env
+          retention-days: 1
+
   trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
