--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -6,6 +6,19 @@ on:
       - main
 
 jobs:
+  env_setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Upload .env artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: env-file
+          path: .env
+          retention-days: 1
+
   trigger_gcp_workflow:
     uses: ./.github/workflows/gcp.yaml
     with:
