--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -25,6 +25,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Download .env artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: env-file
+
       - uses: chrnorm/deployment-action@v2
         id: deployment
         with:
@@ -93,9 +98,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Get short SHA
-        id: get_short_sha
-        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      - name: Download .env artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: env-file
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
@@ -110,7 +116,7 @@ jobs:
       - name: Deploy to Google Cloud
         run: |
           gcloud config set compute/region ${{ inputs.gcp_region }}
-          gcloud builds submit --config cloudbuild.yaml --substitutions=_REGION=${{ inputs.gcp_region }},_ENV_NAME=${{ inputs.env_name }},_SHORT_SHA=${{ steps.get_short_sha.outputs.sha }}
+          gcloud builds submit --config cloudbuild.yaml --substitutions=_REGION=${{ inputs.gcp_region }},_ENV_NAME=${{ inputs.env_name }}
 
       - uses: chrnorm/deployment-status@v2
         with:
