--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -20,6 +20,7 @@ jobs:
           retention-days: 1
 
   trigger_gcp_workflow:
+    needs: env_setup
     uses: ./.github/workflows/gcp.yaml
     with:
       env_name: dev
