--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -23,6 +23,7 @@ jobs:
           retention-days: 1
 
   trigger_gcp_workflow:
+    needs: env_setup
     uses: ./.github/workflows/gcp.yaml
     with:
       env_name: staging
