--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^6.0.0",
+        "react-tooltip": "^5.28.1",
         "tailwind-merge": "^3.0.2",
         "urql": "^4.2.1",
         "zustand": "^5.0.4"
